--- a/Cliente/Ejercicios/JQuery/pruebas/04.html
+++ b/Cliente/Ejercicios/JQuery/pruebas/04.html
@@ -41,7 +41,7 @@
         <h3>Título</h3>
         <p class="importante">Párrafo 3</p>
         <input type="text" value="texto del input"><br/>
-        <a href="http://wwww.iessantiagohernandez.com/">Enlace</a><br/>
+        <a href="http://www.iessantiagohernandez.com/">Enlace</a><br/>
         <button id="cambiar">Cambiar enlace</button>
     </div>
 
