--- a/Interfaces/bootstrap/panels/paneles.html
+++ b/Interfaces/bootstrap/panels/paneles.html
@@ -10,24 +10,24 @@
 </head>
 
 <body class="container">
-    <header class="row bg-green" style="border: 1px;">
+    <header class="row bg-lggreen" style="border: 1px;">
         <div class="col-lg-12">
             <p>Encabezado</p>
         </div>
     </header>
     <div class="row mt-3">
         <aside class="col-2  h-25">
-            <div class="bg-green height1 mt-1"></div>
-            <div class="bg-green height1 mt-1"></div>
+            <div class="bg-lggreen height1 mt-1"></div>
+            <div class="bg-lggreen height1 mt-1"></div>
         </aside>
-        <section class="col-8 bg-green height5"></section>
+        <section class="col-8 bg-lggreen height5"></section>
         <aside class="col-2  h-25">
-            <div class="bg-green height1 mt-1"></div>
-            <div class="bg-green height1 mt-1"></div>
+            <div class="bg-lggreen height1 mt-1"></div>
+            <div class="bg-lggreen height1 mt-1"></div>
         </aside>
     </div>
 
-    <footer class="row col-12 height1 bg-green mt-1"></footer>
+    <footer class="row col-12 height1 bg-lggreen mt-1"></footer>
 </body>
 
 </html>
