--- a/Cliente/Tareas/TareUD_4_5/01.html
+++ b/Cliente/Tareas/TareUD_4_5/01.html
@@ -9,6 +9,8 @@ columnas Artista y Título
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <title>Ejercicio 1</title>
     <style>
         table,
         th,
@@ -24,66 +26,34 @@ columnas Artista y Título
     </style>
     <script>
         function procesaRespuesta() {
-            parrafo.textContent = "Estado 4: " + peticion_http.readyState + ". Estado 200: " + peticion_http.status;
+            //en funcion de estado de la peticion realiza una accion u otra.
             if (peticion_http.readyState == 4 && peticion_http.status == 200) {
-                parrafo.textContent = "Conexion realizada con exito";
-                var listadoNoticias = peticion_http.responseXML.getElementsByTagName("CD");
-                for (i = 0; i < listadoNoticias.length; i++) {
-                    crearItem(listadoNoticias[i].childNodes[1].textContent);
-                    var listado = document.getElementById("lista");
-                    var nuevoElemento = document.createElement("li");
-                    crearItem(listadoNoticias[i].childNodes[3].textContent);
-                    var listado = document.getElementById("lista");
-                    var nuevoElemento = document.createElement("li");
-                }
-                alert("datos recibidos");
+                var listadoCD = peticion_http.responseXML.getElementsByTagName("CD");
+                crearTabla(listadoCD);
             } else {
-                parrafo.textContent = "En proceso";
-                alert("Realizando, otra vez, la peticion http");
                 peticion_http.onreadystatechange = procesaRespuesta;
             }
 
-            function crearItem(item) {
-                // alert("Creando lista");
-                var listado = document.getElementById("lista");
-                var nuevoElemento = document.createElement("li");
-                var nuevoTexto = document.createTextNode(item);
-                nuevoElemento.appendChild(nuevoTexto);
-                listado.appendChild(nuevoElemento);
-            }
-        }
-
-        function tablaCatalogo() {
-            if (window.XMLHttpRequest) {
-                peticion_http = new XMLHttpRequest();
-            } else if (window.ActiveXObject) {
-                peticion_http = new ActiveXObject("Microsoft.XMLHTTP");
-            } else {
-                alert("Su navegador no soporta ajax")
-            }
-
-            peticion_http.onreadystatechange = cargarTabla;
-            peticion_http.open("GET", "cd_catalog.xml", true);
-            peticion_http.send(null);
-        }
-
-        function cargarTabla() {
-            var parrafo = document.getElementById("parrafo");
-            if (peticion_http.readyState == 4 && peticion_http.status == 200) {
-                var listadoNoticia = peticion_http.responseXML.getElementsByTagName("CD");
-                for (i = 0; i < listadoNoticia.length; i++) {
-                    crearTabla(listadoNoticia[i].childNodes[1].textContent, listadoNoticia[i].childNodes[3].textContent);
+            function crearTabla(listadoCD) {
+                var table = document.getElementById("demo");
+                var tr = document.createElement("tr");
+                var th1 = document.createElement("th");
+                var th2 = document.createElement("th");
+                var texto1 = document.createTextNode("Titulo");
+                var texto2 = document.createTextNode("Artista");
+                th1.appendChild(texto1);
+                th2.appendChild(texto2);
+                tr.appendChild(th1);
+                tr.appendChild(th2);
+                table.appendChild(tr);
+                for (i = 0; i < listadoCD.length; i++) {
+                    escribirTabla(listadoCD[i].childNodes[1].textContent, listadoCD[i].childNodes[3].textContent);
                     var table = document.getElementById("table");
                     var tr = document.createElement("tr");
                 }
-                parrafo.innerText = "Datos recibidos";
-                //alert("Datos recibidos");
-            } else {
-                parrafo.innerText = "En proceso";
-                //alert("En proceso");
             }
 
-            function crearTabla(titulo, artista) {
+            function escribirTabla(titulo, artista) {
                 var table = document.getElementById("demo");
                 var tr = document.createElement("tr");
                 var td1 = document.createElement("td");
@@ -97,41 +67,30 @@ columnas Artista y Título
                 table.appendChild(tr);
             }
         }
+
+        function tablaCatalogo() {
+            if (window.XMLHttpRequest) {
+                peticion_http = new XMLHttpRequest();
+            } else if (window.ActiveXObject) {
+                peticion_http = new ActiveXObject("Microsoft.XMLHTTP");
+            } else {
+                alert("Su navegador no soporta ajax")
+            }
+            peticion_http.onreadystatechange = procesaRespuesta;
+            peticion_http.open("GET", "cd_catalog.xml", true);
+            peticion_http.send(null);
+        }
     </script>
 </head>
 
 <body>
-    <p id="parrafo"></p>
     <div id="texto">
         <h1>Colección de Cds</h1>
         <button id="cargaCatalogo">Carga catálogo</button>
     </div>
-    <ul id="lista">
-
-    </ul>
     <table id="demo"></table>
     <script>
         document.getElementById("cargaCatalogo").addEventListener("click", tablaCatalogo, false);
-        //document.getElementById("cargaCatalogo").addEventListener("click", procesaRespuesta, false);
-
-        /* //Crear el objeto
-        if (window.XMLHttpRequest) {
-            peticion_http = new XMLHttpRequest();
-            alert("En proceso, petición preparada");
-        } else if (window.ActiveXObject) {
-            peticion_http = new ActiveXObject("Microsoft.XMWHTTP");
-        } else {
-            alert("Su navegador no soporta AJAX ");
-        }
-
-        alert("Realizando la peticion http");
-        //Asignar la funcion de procesamiento
-        peticion_http.onreadystatechange = procesaRespuesta;
-        alert("Procesando respuesta");
-        //Preparar la peticion
-        peticion_http.open("GET", "cd_catalog.xml", true); //asincrono
-        //Enviar la petición
-        peticion_http.send(null); */
     </script>
 </body>
 
