--- a/Cliente/Tareas/TareUD_4_5/02.html
+++ b/Cliente/Tareas/TareUD_4_5/02.html
@@ -12,61 +12,59 @@ Presenta el documento obtenido mediante AJAX usando métodos de Javascript. Pued
 <html lang="es">
 
 <head>
-    <title>Ejercicio 6</title>
+    <title>Ejercicio 2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="author" content="">
     <style></style>
-    <script>
-        if (window.XMLHttpRequest) {
-            peticion_http = new XMLHttpRequest();
-            //alert("Su navegador soporta AJAX con objetos XMLHttpRequest");
-        } else if (window.ActiveXObject) {
-            peticion_http = new ActiveXObject("Microsoft.XMWHTTP");
-            // alert("Su navegador soporta AJAX con objetos ActiveXObject");
-        } else {
-            alert("Su navegador no soporta AJAX ");
-        }
-        //Asignar la funcion de procesamiento
-        peticion_http.onreadystatechange = procesaRespuesta;
-        //Preparar la peticion
-        peticion_http.open("GET", "json_06gimnasio.json", true);//asincrono
-        //Enviar la petición
-        peticion_http.send(null);
 
+    <script>
+        function cargarJson() {
+            if (window.XMLHttpRequest) {
+                peticion_http = new XMLHttpRequest();
+                //alert("Su navegador soporta AJAX con objetos XMLHttpRequest");
+            } else if (window.ActiveXObject) {
+                peticion_http = new ActiveXObject("Microsoft.XMWHTTP");
+                // alert("Su navegador soporta AJAX con objetos ActiveXObject");
+            } else {
+                alert("Su navegador no soporta AJAX ");
+            }
+            //Asignar la funcion de procesamiento
+            peticion_http.onreadystatechange = cargarDatos;
+            //Preparar la peticion
+            peticion_http.open("GET", "actividad.json", true); //asincrono
+            //Enviar la petición
+            peticion_http.send(null);
+        }
+
+        function cargarDatos() {
+            //alert("cargando datos")
+            var json = peticion_http.responseText;
+            var obj = JSON.parse(json);
+
+            var table = document.getElementById("tabla");
+            var trTitulo = document.createElement("tr");
+            trTitulo.innerHTML = "<th> Nombre </th><th> Descripción </th><th> Tipo </th><th> Duracion </th><th> Calorias </th><th> Beneficios </th><th> Tipo de ejercicio </th>";
+            tabla.appendChild(trTitulo);
+
+            for (var j = 0; j < obj.length; j++) {
+                crearTabla(obj[j].nombre, obj[j].descripcion, obj[j].tipo.join(), obj[j].duracion, obj[j].calorias, obj[j].beneficios.join(), obj[j].tipoEjercicio.join())
+            }
+        }
+
+        function crearTabla(name, descrip, tipo, duracion, calorias, beneficios, ejercicio) {
+            var tabla = document.getElementById("tabla");
+            var tr = document.createElement("tr");
+            tr.innerHTML = "<td>" + name + "</td> <td>" + descrip + "</td><td>" + tipo + "</td><td>" + duracion + "</td><td>" + calorias + "</td><td>" + beneficios + "</td><td>" + ejercicio + "</td>";
+            tabla.appendChild(tr);
+        }
     </script>
 </head>
 
 <body>
-
     <input type="button" id="cargar" value="Mostrar Actividades">
+    <table id="tabla"></table>
     <script>
-        document.getElementById("cargar").addEventListener("click", crearTabla, false);
-        function crearTabla() {
-            var docJson = null;
-            if (peticion_http.readyState == 4 && peticion_http.status == 200) {
-                respTxt = peticion_http.responseTxt;
-            }
-            if (respTxt != null) {
-                var docJson = JSON.parse(respTxt);
-                var table = document.createElement("table");
-                table.setAttribute("border","1");
-                
-                // 
-                //
-
-                for (var i = 0; i < 6; i++) {
-                    actividades.forEach((dep, index) => {
-                        var elemento = document.createElement("td");
-                        var texto = document.createTextNode(dep)
-                        elemento.appendChild(texto);
-                        var ind = (index + 1).toString();
-                        var lista = document.getElementById("actividad" + ind);
-                        lista.appendChild(elemento);
-                    });
-                }
-            }
-
-        }
+        document.getElementById("cargar").addEventListener("click", cargarJson, false);
     </script>
 
 </body>
