--- a/Cliente/Ejercicios/JQuery/pruebas/06.html
+++ b/Cliente/Ejercicios/JQuery/pruebas/06.html
@@ -47,7 +47,7 @@
     <button id="boton1">Cambiar</button>
 
     <script>
-        document.getElementById("cambiar").addEventListener("click", cambiarEnlace, false);
+        //document.getElementById("cambiar").addEventListener("click", cambiarEnlace, false);
     </script>
 </body>
 
