raro final js desconocido

--- a/Cliente/Tareas/TareUD_4_5/04.html
+++ b/Cliente/Tareas/TareUD_4_5/04.html
@@ -23,7 +23,7 @@
 
             //Añadir un elemento al final de la lista
             $("#boton3").click(function() {
-                $("ul").append("<li>Nuevo elemnto al final</li>")
+                $("ul").append("<li>Nuevo elemento al final</li>")
             })
 
             //Añadir un elemento al principio de la lista
@@ -57,9 +57,7 @@
         <li>Segundo item</li>
         <li>Tercer item</li>
         <li>Cuarto item</li>
-
     </ul>
-
     <p>
         <input type="button" id="boton1" value="Eliminar la lista completa."><br>
         <input type="button" id="boton2" value="Restaurar Lista"><br>
@@ -69,10 +67,7 @@
         <input type="button" id="boton6" value="Eliminar el primer elemento."><br>
         <input type="button" id="boton7" value="Decorar colores alternos"><br>
     </p>
-
-
     <script>
-        document.getElementById("cambiar").addEventListener("click", cambiarEnlace, false);
     </script>
 </body>
 
