--- a/Cliente/Tareas/TareUD_4_5/05.html
+++ b/Cliente/Tareas/TareUD_4_5/05.html
@@ -12,33 +12,32 @@
         function iniciar() {
             // alert("iniciamos");
             //cargar el txt del Servidor
-            $("#boton").click(function() {
+            $("#boton").click(function () {
                 cargarJSON();
             });
         }
 
         function cargarJSON() {
             $.ajax({
-                    type: "post",
-                    url: "actividad.json"
-                })
-                .done(function(datos) {
+                type: "post",
+                url: "actividad.json"
+            })
+                .done(function (datos) {
                     //alert("done");
                     cargarTabla(datos);
                     //alert("Texto grabado");
                 })
-                .fail(function(datos) {
+                .fail(function (datos) {
                     alert("Ha ocurrido un error");
                     cargarJSON();
                 })
-                .always(function() {
+                .always(function () {
                     //alert("Trabajo realizado");
                 });
         }
 
         function cargarTabla(dat) {
-            //var ficheroJSON = dat; 
-            //alert(ficheroJSON[0].nombre);lee json en jav script
+            $("tr.dato").remove();//vaciamos la tabla de filas con datos para evitar repetir filas.
             var elementos = $(dat);
             for (i = 0; i < elementos.length; i++) {
                 var actividadN = elementos.eq(i).prop("nombre");
@@ -48,13 +47,13 @@
         }
 
         function grabarFila(act, lis) {
-            $("#tabla").append("<tr><td>" + act + "</td><td>" + lis + "</td></tr>");
+            $("#tabla").append("<tr class='dato'><td>" + act + "</td><td>" + lis + "</td></tr>");
         }
     </script>
 </head>
 
 <body>
-    <input type="button" id="boton" value="Cargar JSON"><br/>
+    <input type="button" id="boton" value="Cargar JSON"><br />
     <table id="tabla" border="1">
         <tr>
             <th>Actividad</th>
