sol y nubes interfaces

--- a/Interfaces/JQuery/solYnubes.html
+++ b/Interfaces/JQuery/solYnubes.html
@@ -6,32 +6,29 @@
     <title>Ejercicio css+jquery</title>
     <script src="jQuery/jquery-3.4.1.min.js" type="text/javascript"></script>
     <script>
-        var caeSol = function () {
-            $("#circulo1").css("display", "block");
-            $("#circulo1").animate({
-                top: "35%"
-            }, 400);
-        }
+
         var x;
         var timer;
         var reproducir = function () {
             $("#cuadro1").css("display", "block");
             $("#cuadro1").animate({
-                left: "80%"
+                left: "100%"
             }, 4000).animate({
-                left: "18%"
+                left: "-18%"
             }, 10);
             reproducir();
-            //timer = setTimeout('reproducir()', 4000);
-        }
+            
+        };
 
         $(document).ready(function () {
             $("#tv").click(function () {
-                caeSol();
-                reproducir();
-
+                $("#circulo1").css("display", "block");
+                $("#circulo1").animate({
+                    top: "35%"
+                }, 4000);
+                timer = setTimeout('reproducir()', 4000);
+                
             });
-
         });
     </script>
     <style>
@@ -54,7 +51,7 @@
 
         #circulo1 {
             position: absolute;
-            top: 20%;
+            top: -90px;
             left: 50%;
             border-radius: 50%;
             margin: 0px 0 0 150px;
@@ -62,18 +59,17 @@
             width: 80px;
             height: 80px;
             display: none;
-            z-index: 2;
+            z-index: 5;
         }
 
         #cuadro1 {
             width: 80px;
             height: 50px;
             background-color: red;
-            display: none;
             position: absolute;
             top: 10%;
-            left: 10%;
-            z-index: 5;
+            left: -18%;
+            z-index: 2;
         }
 
         #cuadro2 {
@@ -94,11 +90,11 @@
 
 <body>
     <div id="tv">
+        <div id="circulo1"></div>
         <div id="cuadro1"></div>
         <div id="cuadro2"></div>
         <div id="cuadro3"></div>
     </div>
-    <div id="circulo1"></div>
 
 </body>
 
