--- a/Cliente/pruebas/Cokies/cokies.html
+++ b/Cliente/pruebas/Cokies/cokies.html
@@ -39,10 +39,10 @@
         var listadoCookies=document.cookie;
         alert(listadoCookies);
 
-        // var array=listadoCookies.split();
-        // for(){
-
-        // }
+        var array=listadoCookies.split();
+        for(i=0;i<array.length;i++){
+            alert(array[i]);
+        }
 
     </script>
 </body>
