--- a/Cliente/pruebas/Cokies/json.html
+++ b/Cliente/pruebas/Cokies/json.html
@@ -14,6 +14,7 @@
     <script>
         var str='{"name":"Manz","life":90}';
 
+        //Convertir de Json a un objeto Javascript
         var obj=JSON.parse(str);
         alert(obj.name);
         alert(obj.life);
