--- a/Cliente/pruebas/estorage/filereader.html
+++ b/Cliente/pruebas/estorage/filereader.html
@@ -2,26 +2,20 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio de filereader</title>
-    <script type="text/javascript">
-    function leerArchivo() {
-        //selecciona el primer archivo
-        var fichero=this.files[0];
-        // var fichero=document.getElementById("archivo").files[0];
-        alert(fichero.name);
-        //permite leer ficheros de forma asíncrona
-        var lector =new FileReader();
-        //Abrir el archivo en modo lectura
-        lector.readAsText(fichero);
-        // document.getElementById("parrafo").textContent=lector.result;
-        lector.onload=function(){
-            //el texto del archivo se mostrará en parrafo
-            document.getElementById("parrafo").textContent=lector.result;
+    <title>Ejercicio FILE READER ficheros</title>
+    <script>
+        function leerArchivo(){
+            var fichero=this.files[0];
+            alert(fichero.name);
+            var lector = new FileReader();
+            lector.readAsText(fichero);//abrir en modo lectura
+            lector.onload=function(){
+                //el texto del archivo se mostrará en el parrafo
+                document.getElementById("parrafo").textContent=lector.result;
+            }
         }
-    }
     </script>
 </head>
-
 <body>
     <input type="file" id="archivo">
     <p id="parrafo"></p>
