--- a/Interfaces/JQuery/Ejemplo21_caja.html
+++ b/Interfaces/JQuery/Ejemplo21_caja.html
@@ -22,6 +22,14 @@
                         top: "-=300"
                     }, 2000)
                     .animate({
+                        left: '+=50',
+                        top: '+=50'
+                    }, 1000)
+                    .animate({
+                        left: '-=50',
+                        top: '-=50'
+                    }, 1000)
+                    .animate({
                         width: "+=300",
                         height: "+=300"
                     }, 2000).animate({
