--- a/Interfaces/bootstrap/Ejemplos/cap05_ejemplo11.html
+++ b/Interfaces/bootstrap/Ejemplos/cap05_ejemplo11.html
@@ -1,5 +1,6 @@
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -7,54 +8,64 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-      $('.carousel').carousel({
-           interval: 4000,
-           pause:true,
-           wrap:false
-      });
+        $('.carousel').carousel({
+            interval: 7000,
+            pause: true,
+            wrap: false
+        });
     </script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <div id="carrusel" class="carousel slide col-sm-12 col-md-8 col-lg-8 col-xl-8" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carrusel" data-slide-to="0" class="active"></li>
-            <li data-target="#carrusel" data-slide-to="1"></li>
-            <li data-target="#carrusel" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel item active">
-              <img src="img/ejer11/img1.jpg" class="d-block " alt="...">
-              <div class="carousel-caption ">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
+        <div id="carrusel" class="carousel slide col-sm-12 col-md-8 col-lg-8 col-xl-8" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carrusel" data-slide-to="0" class="active"></li>
+                <li data-target="#carrusel" data-slide-to="1"></li>
+                <li data-target="#carrusel" data-slide-to="2"></li>
+                <li data-target="#carrusel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel item active">
+                    <img src="img/ejer11/img1.jpg" class="d-block " alt="...">
+                    <div class="carousel-caption ">
+                        <h5>First slide label</h5>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                </div>
+                <div class="carousel item">
+                    <img src="img/ejer11/img2.jpg" class="d-block " alt="...">
+                    <div class="carousel-caption ">
+                        <h5>Second slide label</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+                <div class="carousel item">
+                    <img src="img/ejer11/img3.jpg" class="d-block " alt="...">
+                    <div class="carousel-caption ">
+                        <h5>Third slide label</h5>
+                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    </div>
+                </div>
+                <div class="carousel item">
+                    <img src="img/ejer11/img4.jpg" class="d-block " alt="...">
+                    <div class="carousel-caption ">
+                        <h5>Fourd slide label</h5>
+                        <p>Añadido por que apetecia.</p>
+                    </div>
+                </div>
             </div>
-            <div class="carousel item">
-              <img src="img/ejer11/img2.jpg" class="d-block " alt="...">
-              <div class="carousel-caption ">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              </div>
-            </div>
-            <div class="carousel item">
-              <img src="img/ejer11/img3.jpg" class="d-block " alt="...">
-              <div class="carousel-caption ">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-              </div>
-            </div>
-          </div>
-          <a class="left carousel-control" href="#carrusel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carrusel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+            <a class="left carousel-control" href="#carrusel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carrusel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-      </div>
-  </body>
+    </div>
+</body>
+
 </html>
