--- a/Interfaces/bootstrap/Ejemplos/ejemplo_paginador.html
+++ b/Interfaces/bootstrap/Ejemplos/ejemplo_paginador.html
@@ -1,12 +1,14 @@
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
         <h3>Paginador por defecto</h3>
         <ul class="pagination">
@@ -16,17 +18,20 @@
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
             <li><a href="#">5</a></li>
+            <li><a href="#">6</a></li>
             <li><a href="#">&raquo;</a></li>
         </ul>
         <h3>Paginador por defecto</h3>
         <ul class="pager">
             <li><a href="#">Anterior</a></li>
             <li><a href="#">Siguiente</a></li>
+            <li><a href="#">Última</a></li>
         </ul>
         <ul class="pager">
             <li class="previous"><a href="#">&larr; Anterior</a></li>
             <li class="next"><a href="#">Siguiente &rarr;</a></li>
         </ul>
     </div>
-  </body>
+</body>
+
 </html>
