--- a/Cliente/2Ev_Examen/ej3_biblio.html
+++ b/Cliente/2Ev_Examen/ej3_biblio.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="utf-8">
     <title>Ejercicio 3 - libros JQUERY</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="jquery-3.6.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(iniciar);
 
         function iniciar() {
+            // cabeza();
             leerArchivo();
         }
 
         function leerArchivo() {
             $.ajax({
                     type: "post",
-                    url: "biblio.xml"
+                    url: "biblio.xml",
+                    dataType: "xml"
                 })
                 .done(function(datos) {
                     alert("done");
@@ -24,7 +28,8 @@
                 })
                 .fail(function(datos) {
                     alert("Ha ocurrido un error");
-                    cargarJSON();
+                    alert(datos);
+                    // leerArchivo();
                 })
                 .always(function() {
                     alert("Trabajo realizado");
@@ -35,13 +40,39 @@
         function cargarLista(datos) {
             //var ficheroJSON = dat; 
             //alert(ficheroJSON[0].nombre);lee json en jav script
-            var elementos = $(datos);
+            var elementos = $(datos).find("libro");
             for (i = 0; i < elementos.length; i++) {
                 var titulo = $(elementos).eq(i).find("titulo").text();
                 var autor = $(elementos).eq(i).find("autor").text();
                 $("ul").append("<li>" + titulo + " por " + autor + ".</li>");
             }
         }
+
+
+        // function cabeza(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain chain)
+        // throws IOException, ServletException {
+        //     HttpServletRequest request = (HttpServletRequest) servletRequest;
+        //     HttpServletResponse response = (HttpServletResponse) servletResponse;
+        //     // Solicitud de dominio cruzado, * significa permitir todos los tipos
+        //     response.setHeader("Access-Control-Allow-Origin", "*");
+        //     // Permitir método de solicitud
+        //     response.setHeader("Access-Control-Allow-Methods", "POST, GET, OPTIONS, DELETE");
+        //     // Utilizado para especificar el período de validez de esta solicitud de verificación previa, la unidad es la segunda, durante la cual no se emite ninguna otra solicitud de verificación previa
+        //     response.setHeader("Access-Control-Max-Age", "3600");
+        //     // El contenido del campo incluido en la solicitud, si hay varias comas disponibles separadas de la siguiente manera
+        //     response.setHeader("Access-Control-Allow-Headers", "content-type,x-requested-with,Authorization, x-ui-request,lang");
+        //     // Credenciales permitidas de control de acceso, verdadero está permitido
+        //     response.setHeader("Access-Control-Allow-Credentials", "true");
+        //     // El navegador enviará una solicitud de opciones primero, si la solicitud pasa, luego continuará enviando una solicitud de publicación formal
+        //     // Se devuelve la solicitud para configurar opciones
+        //     if (request.getMethod().equals("OPTIONS")) {
+        //         response.setStatus(HttpStatus.SC_OK);
+        //         response.getWriter().write("OPTIONS returns OK");
+        //         return;
+        //     }
+        //     // Pasando el procesamiento de solicitud de negocio
+        //     chain.doFilter(servletRequest, servletResponse);
+        // }
     </script>
 </head>
 
