--- a/Cliente/2Ev_Examen/ej4_cookies.html
+++ b/Cliente/2Ev_Examen/ej4_cookies.html
@@ -5,38 +5,75 @@
     <title>Ejercicio 4 - Cookies y Local Storage</title>
 
     <script type="text/javascript">
+        // document.cookie = "saludo=HolaMundo;";
+        // document.cookie = "despedida=Adios;";
+        // var listadoCookies = document.cookie;
+        // alert(listadoCookies);
+
+
+        // var valor = parrafo[0].innerHTML; // = listadoCookies;
+        // parrafo[0].textContent = listadoCookies;
+
+        // document.write(listadoCookies + "; ");
+        // //document.getElementsByTagName("p")[0].innerText = listadoCookies;
+
+
+        // //borrar cookie
+        // document.cookie = "saludo=HolaMundo; max-age=0";
+        // listadoCookies = document.cookie;
+
+
+        // //parrafos[0].appendChild = listadoCookies;
+        // document.write(listadoCookies);
+
+
+        // //crear item en la local storage
+        // localStorage.setItem("NIF", "123456789A");
+
+        // sessionStorage.setItem("NIF", localStorage);
+        // alert(sessionStorage);
+    </script>
+</head>
+
+<body>
+    <p></p>
+
+    <script>
+        var parrafos = document.getElementsByTagName("p");
+        // alert("Los parrafos son " + parrafos.length + ": ");
+        // for (var i = 0; i < parrafos.length; i++) {
+        //     alert(parrafos[i].id);
+
+        // }
+
         document.cookie = "saludo=HolaMundo;";
         document.cookie = "despedida=Adios;";
         var listadoCookies = document.cookie;
         alert(listadoCookies);
 
 
-        var parrafos = document.getElementsByTagName("p");
-        //parrafos[1].textContent = listadoCookies;
-        document.write(parrafos[1] + listadoCookies);
 
+        parrafos[0].innerHTML = listadoCookies + "; ";
 
         //borrar cookie
         document.cookie = "saludo=HolaMundo; max-age=0";
         listadoCookies = document.cookie;
 
-        var parrafos = document.getElementsByTagName("p");
 
-        document.write(parrafos[1] + listadoCookies);
+        var valor = parrafos[0].innerHTML;
+        alert(valor);
+        parrafos[0].innerHTML = valor + listadoCookies + "; ";
 
 
         //crear item en la local storage
         localStorage.setItem("NIF", "123456789A");
 
         sessionStorage.setItem("NIF", localStorage);
-        sessionStorage.getItem("NIF")
-        document.write(parrafos[1] + sessionStorage);
-    </script>
-</head>
+        alert(sessionStorage);
 
-<body>
-    <p></p>
-    <script>
+        var valor = parrafos[0].innerHTML;
+        alert(valor);
+        parrafos[0].innerHTML = valor + sessionStorage + "; ";
     </script>
 </body>
 
